Actions
Bug #9168
closedlibsldap: this statement may fall through
Start date:
2018-02-22
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Issue found by gcc 7 build:
../common/ns_config.c:3712:8: error: this statement may fall through [-Werror=implicit-fallthrough=] if (*(cp+1) == '\0') { ^ ../common/ns_config.c:3715:4: note: here default: ^~~~~~~ ../common/ns_standalone.c: In function '_filter_gethostbyaddr_r': ../common/ns_standalone.c:432:9: error: this statement may fall through [-Werror=implicit-fallthrough=] dbop = NSS_DBOP_IPNODES_BYADDR; ../common/ns_standalone.c:433:2: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit a17ca6b197105110096f6f9375dbb5d492999d3a
commit a17ca6b197105110096f6f9375dbb5d492999d3a Author: Toomas Soome <tsoome@me.com> Date: 2018-02-27T01:42:43.000Z 9168 libsldap: this statement may fall through Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Gordon Ross <gwr@nexenta.com>
Actions